Change button text from 'Random Key' to '⇋ Random Key'

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
   <div class="controls">
     <select id="keySelect"></select>
-    <button id="randomBtn">🎲 Random Key</button>
+    <button id="randomBtn">⇋ Random Key</button>
   </div>
 
   <div class="circle" id="circle"></div>
