Add controls for key selection in index.html

--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
   <h1>Circle of Fifths</h1>
   <p class="subtitle">Interactive music theory visualization</p>
 
+    <div class="controls">
+    <select id="keySelect"></select>
+  </div>
+  
   <div class="circle" id="circle"></div>
 
   <div class="center">
