Add link button to navigate to dochord.com

--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
 
     <div class="controls">
     <select id="keySelect"></select>
+    <button id="linkBtn" onclick="window.location.href='https://www.dochord.com';">
+  🔗 ไปยัง dochord.com
+</button>
+
   </div>
   
   <div class="circle" id="circle"></div>
