Update button text for link to dochord.com

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="controls">
     <select id="keySelect"></select>
     <button id="linkBtn" onclick="window.location.href='https://www.dochord.com';">
-  🔗 ไปยัง dochord.com
+  🔗 dochord.com
 </button>
 
   </div>
